--- a/CoreDeneme/Views/Category/Index.cshtml
+++ b/CoreDeneme/Views/Category/Index.cshtml
@@ -1,11 +1,11 @@
-﻿@using EntityLayer.Concrete
-@model List<Category>
+﻿
 @{
     Layout = null;
 }
+
 <link href="~/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet"/>
 
-<table class="table-bordered">
+<table class="table table-bordered">
     <tr>
         <th>ID</th>
         <th>Kategori Adı</th>
@@ -24,4 +24,3 @@
         </tr>
     }
 </table>
-
